<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >

    <Button
        android:id="@+id/hayl_list"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="MButt1"
        android:background="@drawable/long_button_yellow"
        android:text="@string/MButt1" />

    <Button
        android:id="@+id/kumtot_list"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hayl_list"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="MButt2"
        android:background="@drawable/long_button_yellow"
        android:text="@string/MButt2" />

    <Button
        android:id="@+id/sikut_list"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kumtot_list"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="MButt3"
        android:background="@drawable/long_button_yellow"
        android:text="@string/MButt3" />

    <Button
        android:id="@+id/dargot_list"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sikut_list"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="MButt4"
        android:background="@drawable/long_button_yellow"
        android:text="@string/MButt4" />

</RelativeLayout>
