<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/cyan_camo_bg"
>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <Button
        android:id="@+id/button_sub1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/menu_rank"
        android:fontFamily="sans-serif-black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:onClick="MButt1"
        android:text="@string/MButt1"
        />
    <Button
    android:id="@+id/button_sub2"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/menu_rank"
    android:fontFamily="sans-serif-black"
    android:textSize="36sp"
    android:textStyle="bold"
    android:text="@string/MButt2"
    android:onClick="MButt2"
    />
    <Button
    android:id="@+id/button_sub3"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/menu_rank"
    android:fontFamily="sans-serif-black"
    android:textSize="36sp"
    android:textStyle="bold"
    android:text="@string/MButt3"
    android:onClick="MButt3"
    />
    <Button
    android:id="@+id/button_sub4"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/menu_rank"
    android:fontFamily="sans-serif-black"
    android:textSize="36sp"
    android:textStyle="bold"
    android:text="@string/MButt4"
    android:onClick="MButt4"
    />
    <Button
    android:id="@+id/button_sub5"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/menu_rank"
    android:fontFamily="sans-serif-black"
    android:textSize="36sp"
    android:textStyle="bold"
    android:text="@string/MButt5"
    android:onClick="MButt5"
    />

    <Button
        android:id="@+id/button_sub6"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/menu_rank"
        android:fontFamily="sans-serif-black"
        android:onClick="MButt6"
        android:text="דגלי יחידות"
        android:textSize="36sp"
        android:textStyle="bold" />

</LinearLayout>

</ScrollView>
