<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <ImageView
        android:id="@+id/zoomed_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/zoomed_image_desc"
        android:src="@drawable/bpin_zahal" />

    <EditText
        android:id="@+id/answer_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/image_guess_hint"
        android:maxLength="30"
        android:singleLine="true" 
		android:layout_below="@+id/zoomed_image" 
		android:layout_marginTop="25dp" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/answer_input"
        android:layout_toLeftOf="@+id/answer_input"
        android:onClick="CheckButton"
        android:text="@string/check_button" />

    <TextView
        android:id="@+id/debug_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/check_button"
        android:text="Debug Tv" />

</RelativeLayout>