<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#00682A" >

    <ImageView
        android:id="@+id/start_menu_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/idf_background_darkgreen" />
    
    <Button
        android:id="@+id/MenuStart"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/long_button_white"
        android:onClick="MenuStart"
        android:layout_below="@+id/start_menu_image"
        android:text="@string/MenuStart" />
    
        <Button
        android:id="@+id/MenuInfo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/MenuStart"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="MenuInfo"
        android:background="@drawable/long_button_white"
        android:text="@string/MenuInfo" />

    <Button
        android:id="@+id/MenuExit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/MenuInfo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/long_button_white"
        android:onClick="MenuExit"
        android:text="@string/MenuExit" />

    <TextView
        android:id="@+id/dbtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/start_menu_image"
        android:text="TextView" 
        android:textColor="#ffffff"
        />

</RelativeLayout>
<!--  android:textColor="#00ff00"  -->